[package]
name = "blake3_hash"
version = "0.1.0"
edition = "2024"


[lib]
crate-type = ["cdylib"]

[dependencies]
blake3 = "1.5.1"
surrealdb = { version = "2.3.7", features = ["kv-rocksdb"] }
tokio = { version = "1.28.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19.0"

[build-dependencies]
cbindgen = "0.29.0"